# hostman

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  TODO.md
docker/: Dockerfile.client
hostman-client/: Cargo.toml
hostman-client/src/: cli.rs  main.rs  parsing.rs
hostman-server/: Cargo.toml
hostman-server/src/: cli.rs  main.rs
hostman-shared/: Cargo.toml
hostman-shared/src/: lib.rs
