[package]
name = "hostman-client"
version = "0.1.0"
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.0.2"
reqwest = { version = "0.10.0-alpha.1", features = ["blocking"]}
tokio = "1.8.4"
serde = "1.0"
serde_json = "1.0"
hostman-shared = { version = "*", path = "../hostman-shared" }
combine = "4.0.0-beta.1"
sys-info = "0.5.8"
pnet = "0.22.0"
clap = "2.33.0"
ipnetwork = "^0.14.0"
