[package]
name = "hostman-server"
version = "0.1.0"
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
sled = "*"
clap = "2.33.0"
hostman-shared = { version = "*", path = "../hostman-shared" }
